# rs-measures

./: CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  build.sh  format_measures.sh
.github/: PULL_REQUEST_TEMPLATE.md
define-units-relation/: Cargo.toml
define-units-relation/examples/: bench.rs  full.rs
define-units-relation/examples/units/: mod.rs
define-units-relation/src/: lib.rs
define-units-relation/tests/: all-define-units-relation.rs  test_derived_1d.rs  test_derived_2d.rs
define-units-relation/tests/define-units-relation/: 0_is_1_mul_1.rs  1_is_0_div_1.rs  1_is_1_div_1.rs  1_is_1_mul_1.rs  1_is_2_cross_2.rs  1_is_2_cross_itself.rs  1_is_2_mul_itself.rs  1_is_3_mul_3.rs  1_is_3_mul_itself.rs  1_mul_1_is_1.rs  1_mul_3_is_3.rs  1_mul_itself_is_1.rs  2_cross_2_is_1.rs  2_mul_1_is_2.rs  2_mul_2_is_1.rs  3_cross_itself_is_3.rs  3_div_1_is_3.rs  3_is_1_mul_3.rs  3_is_3_cross_3.rs  3_is_3_div_1.rs  3_is_3_mul_1.rs  3_mul_3_is_1.rs  3_mul_itself_is_1.rs  fail_1_is_bad_literal_div_1.rs  fail_1_mul_1_mul_1.stderr  fail_4_is_1_mul_1.rs  fail_4_is_1_mul_1.stderr
define-units-relation/tests/ui/: measure002_convert.stderr  measure004_convert.stderr  measure006_convert.stderr  measure007_convert.stderr  measure012_convert.rs  measure015_convert.stderr  measure017_convert.stderr  measure025_convert.stderr  measure029_convert.stderr
docs/: Architecture.md  Motivation.md  Tutorial.md
examples/: bench.rs  bench2.rs  mks.rs  nbody-measures.rs  nbody-naked.rs  poc.rs  si.rs  unit.rs  units.rs
rs-measures/: Cargo.toml  README.md
rs-measures/examples/: bench.rs  bench2.rs  full.rs
rs-measures/examples/units/: mod.rs
rs-measures/src/: define_1d_2d.rs  define_1d_2d_3d.rs  define_1d_and_directions.rs  dyn_tests.rs  lib.rs  matrix_utils.rs  measure1d.rs  measure2d.rs  measure3d.rs  traits.rs
rs-measures/src/inner/: affine_map_2d.rs  affine_map_3d.rs  linear_map_2d.rs  linear_map_3d.rs  measure.rs  measure_2d.rs  measure_3d.rs  measure_point.rs  measure_point_2d.rs  measure_point_3d.rs  signed_direction.rs  unsigned_direction.rs
rs-measures/tests/: test_affine_map_2d.rs  test_affine_map_3d.rs  test_angles_consts.rs  test_derived_1d.rs  test_derived_2d.rs  test_linear_map_2d.rs  test_linear_map_3d.rs  test_measure1d.rs  test_measure2d.rs  test_measure3d.rs  test_measure_1d.rs  test_measure_2d.rs  test_measure_3d.rs  test_measure_point_1d.rs  test_measure_point_2d.rs  test_measure_point_3d.rs  test_signed_directions.rs  test_unsigned_directions.rs  test_utils.rs
rs-measures/tests/angles_decl/: mod.rs
rs-measures/tests/define-units-relation/: 0_div_1_is_1.rs  1_div_1_is_1.rs  1_is_1_div_1.rs  1_is_2_mul_2.rs  1_mul_1_is_0.rs  1_mul_1_is_not_1.rs  1_mul_1_is_not_1.stderr  1_mul_2_is_2.rs  2_cross_itself_is_1.rs  2_div_1_is_2.rs  2_is_1_mul_2.rs  2_is_2_div_1.rs  2_is_2_mul_1.rs  2_mul_itself_is_1.rs  3_cross_3_is_3.rs  3_is_1_mul_3.rs  3_is_3_cross_itself.rs  3_is_3_mul_1.rs  3_mul_1_is_3.rs
rs-measures/tests/ui/: measure001_convert.stderr  measure003_convert.stderr  measure009_convert.stderr  measure012_convert.stderr  measure013_convert.stderr  measure016_convert.stderr  measure020_convert.stderr  measure023_convert.stderr  measure026_convert.stderr  measure027_convert.rs  measure027_convert.stderr  measure028_convert.stderr
src/: angle.rs  define_1d.rs  define_1d_3d.rs  define_measure_types.rs  define_units_relationship.rs  (+9 more)
(+107 files in other folders)
