[package]
name = "define-units-relation"
version = "0.0.0"
edition = "2018"
#autotests = false
publish = false

[lib]
proc-macro = true

#[[test]]
#name = "tests"
#path = "tests/all_tests.rs"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }

[dependencies]
proc-macro2 = "1.0.27"
quote = "1.0.9"
syn = "1.0.73"
