[package]
name = "define-units-relation"
version = "0.0.0"
authors = ["Carlo Milanesi <carlo.milanesi@libero.it>"]
edition = "2018"
description = "A procedural macro to be used with the library Rs-Measures to define relations among units of measurement."
repository = "https://github.com/carlomilanesi/rs-measures"
license = "MIT OR Apache-2.0"
readme = "README.md"
publish = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.27"
quote = "1.0.9"
syn = "1.0.73"

[dev-dependencies]
rs-measures = { path = "../rs-measures", version = "0.0.0" }
trybuild = { version = "1.0", features = ["diff"] }
nalgebra = "0.32.3"
