[package]
name = "rs-measures"
version = "0.1.0"
authors = ["Carlo Milanesi <carlo.milanesi@libero.it>"]
edition = "2018"
description = "A library of Rust macros to encapsulate numbers in units of measurement, and forbid hidden or meaningless operations with measures."
repository = "https://github.com/carlomilanesi/rs-measures"
license = "MIT OR Apache-2.0"
readme = "README.md"
publish = false
default-run = "full"

[dependencies]
define-units-relation = { path = "../define-units-relation" }
