[package]
name = "rs-measures"
version = "0.2.0"
authors = ["Carlo Milanesi <carlo.milanesi@libero.it>"]
edition = "2018"
description = "A library of Rust macros to encapsulate numbers in measures, provided with units of measurement, allowing any meaningful operation, but statically forbidding meaningless operations with them."
repository = "https://github.com/carlomilanesi/rs-measures"
license = "MIT OR Apache-2.0"
readme = "README.md"
publish = true

[dev-dependencies]
nalgebra = "0.32.3"
